--- a/src/modules/style.css
+++ b/src/modules/style.css
@@ -1,10 +1,66 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif; 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif; 
 }
 
 body {
-    background-color: #9dc6f5;
+  background-color: #f3f3f3;
+}
+
+header h1 {
+  margin: 30px 0 0 50px;
+}
+
+.main-div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  grid-gap: 25px;
+}
+
+.user-input-div {
+  margin: 70px 0 0 0;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#form input {
+  width: 100%;
+  margin: 10px 0 0 0;
+  padding: 2px 10px;
+  border: 2px solid black;
+}
+
+button {
+  margin: 10px 0 0 0;  
+  padding: 2px 10px;  
+  box-shadow: 3px 3px #000;
+}
+
+#refresh-btn {
+  margin: 0 0 0 10px;
+}
+
+#form button {
+position: relative;
+left: 30%;
+}
+
+.scores-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 0 20px 0;
+}
+
+.scoreboard {
+  border: 2px solid black;
 }
