--- a/src/modules/style.css
+++ b/src/modules/style.css
@@ -2,27 +2,23 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif; 
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-  background-color: #f3f3f3;
+  background-color: #fff;
 }
 
 header h1 {
-  margin: 30px 0 0 50px;
+  margin: 30px 400px 50px 0;
+  text-align: center;
 }
 
 .main-div {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  grid-gap: 25px;
-}
-
-.user-input-div {
-  margin: 70px 0 0 0;
+  justify-content: center;
+  grid-gap: 0 25px;
 }
 
 #form {
@@ -32,15 +28,15 @@ header h1 {
 }
 
 #form input {
-  width: 100%;
+  width: 200px;
   margin: 10px 0 0 0;
   padding: 2px 10px;
   border: 2px solid black;
 }
 
 button {
-  margin: 10px 0 0 0;  
-  padding: 2px 10px;  
+  margin: 10px 0 0 0;
+  padding: 2px 10px;
   box-shadow: 3px 3px #000;
 }
 
@@ -49,8 +45,8 @@ button {
 }
 
 #form button {
-position: relative;
-left: 30%;
+  position: relative;
+  left: 30%;
 }
 
 .scores-header {
@@ -62,5 +58,67 @@ left: 30%;
 }
 
 .scoreboard {
+  width: 400px;
   border: 2px solid black;
+  box-shadow: 3px 3px 5px #000;
+}
+
+.score-element {
+  padding: 10px 0 10px 10px;
+}
+
+.score-even {
+  background-color: #f0f0f0;
+}
+
+.score-odd {
+  background-color: #fff;
+}
+
+@media screen and (max-width: 600px) {
+  header h1 {
+    margin: 0 0 50px 0;
+  }
+
+  .main-div {
+    flex-direction: column;
+    grid-gap: 25px 0;
+  }
+
+  .user-input-div {
+    order: 1;
+    margin: 0 0 50px 0;
+  }
+
+  .user-input-div h2 {
+    text-align: center;
+  }
+
+  .leaderboard-div {
+    order: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .scoreboard {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .score-element {
+    padding: 10px 0 10px 10px;
+  }
+
+  #form button {
+    position: relative;
+    left: 60px;
+  }
+
+  .scores-header {
+    justify-content: center;
+    margin: 0 0 20px 0;
+  }
 }
