--- a/src/modules/style.css
+++ b/src/modules/style.css
@@ -6,19 +6,33 @@
 }
 
 body {
-  background-color: #fff;
+  background-color: gainsboro;
+}
+
+header {
+  background-color: whitesmoke;
+  padding: 30px 0 30px 0;
 }
 
 header h1 {
-  margin: 30px 400px 50px 0;
+  color: cadetblue;
+  margin: 0 250px 0 0;
   text-align: center;
+  font-size: 3.5rem;
+  font-weight: 900;
 }
 
 .main-div {
+  margin: 50px 0 0 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  grid-gap: 0 25px;
+  grid-gap: 0 30px;
+}
+
+.user-input-div h2 {
+  color: maroon;
+  margin: 0 0 15px 0;
 }
 
 #form {
@@ -28,16 +42,31 @@ header h1 {
 }
 
 #form input {
+  border-radius: 5px;
   width: 200px;
   margin: 10px 0 0 0;
-  padding: 2px 10px;
+  padding: 5px 10px;
   border: 2px solid black;
 }
 
 button {
+  border-radius: 3px;
   margin: 10px 0 0 0;
-  padding: 2px 10px;
+  padding: 4px 20px;
   box-shadow: 3px 3px #000;
+  font-size: 1rem;
+}
+
+button:hover {
+  background-color: cadetblue;
+  color: #fff;
+}
+
+button:active {
+  background-color: cadetblue;
+  color: #fff;
+  box-shadow: none;
+  transform: translateY(4px);
 }
 
 #refresh-btn {
@@ -55,6 +84,10 @@ button {
   align-items: center;
   justify-content: space-between;
   margin: 0 0 20px 0;
+}
+
+.scores-header h2 {
+  color: maroon;
 }
 
 .scoreboard {
@@ -81,7 +114,8 @@ button {
 
 @media screen and (max-width: 600px) {
   header h1 {
-    margin: 0 0 50px 0;
+    margin: 0 0 0 0;
+    font-size: 2.5rem;
   }
 
   .main-div {
